--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yew-more-hooks"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = [
     "Jens Reimann <ctron@dentrassi.de>"
@@ -18,11 +18,13 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = { version = "0.4", optional = true }
 yew = "0.21"
 
+log = { version = "0.4", optional = true }
 serde = { version = "1", optional = true }
 yew-hooks = { version = "0.3", optional = true }
 
 [features]
 default = [
+    "log",
     "async",
     "page_state"
 ]
